// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkButton> does not pass filtered props to the link 1`] = `
<a
  className="wrapper primary"
>
  Link text
</a>
`;

exports[`<LinkButton> renders correctly 1`] = `
<a
  className="wrapper"
>
  Link text
</a>
`;
